@@ -1,5 +1,13 @@
 2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/model/action_sequence_description.h:
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	* src/qt4/debug_message_window.cpp:
+	- ActionSequenceSelectorにプレイヤの背番号表示機能を追加
+	- ActionSequenceSelectorのフィルタ実行後にマッチした数を表示できるように改良
+	- DebugMessageWindowのタブ選択でフィールド上のプレイヤも選択されるように変更
+
 	* src/qt4/action_sequence_selector.cpp:
 	- スペース区切りで複数のIDを指定できるように機能追加
 
